re PR target/12133 (Reload abort in simd-3.c)

PR target/12133
* arm.c (arm_legitimate_index_p) Allow DFmode for soft-float
and DImode to use +/-4k offset.

From-SVN: r84357